--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/kaanasci/Chrome-Extension-Backend#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.0",
     "pg": "^8.7.3",
     "sequelize": "^6.17.0"
